--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_API_URL=http://localhost:5000
+      - REACT_APP_BACKEND_API_URL=http://localhost:5000/api
     depends_on:
       - backend
 
