--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,6 @@ Flask==2.3.3
 flask-cors==4.0.0
 python-dotenv==1.0.0
 pytest==7.4.3
-Werkzeug==2.3.7 
+Werkzeug==2.3.7
+boto3==1.28.53
+botocore==1.31.53 
