fixing up docket compose so dockerize app works. moved converter functon

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
         {
             "label": "Start Flask",
             "type": "shell",
-            "command": "${command:python.interpreterPath}",
+            "command": "python",
             "isBackground": true,
             "args": [
                 "-m",
