--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "emotion": "^11.0.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.17"
   },
