--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "@mui/material-nextjs": "^7.2.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/x-charts": "^8.8.0",
+    "@mui/x-date-pickers": "^8.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.16.0",
+    "dayjs": "^1.11.13",
     "emotion": "^11.0.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
