--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^3.1.2",
     "styled-components": "^6.1.17"
   },
   "peerDependencies": {
