--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -2,10 +2,10 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: 'Retirement Portfolio Application Resources'
 
 Resources:
-  RetirementUsersTable:
+  UsersTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: retirement_users
+      TableName: users
       BillingMode: PAY_PER_REQUEST
       KeySchema:
         - AttributeName: user_id
@@ -13,47 +13,70 @@ Resources:
       AttributeDefinitions:
         - AttributeName: user_id
           AttributeType: S
-      Tags:
-        - Key: Name
-          Value: retirement-users
-        - Key: Environment
-          Value: production
-
-  RetirementPortfoliosTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: retirement_portfolios
-      BillingMode: PAY_PER_REQUEST
-      KeySchema:
-        - AttributeName: retirement_fund_id
-          KeyType: HASH
-      AttributeDefinitions:
-        - AttributeName: retirement_fund_id
-          AttributeType: S
-        - AttributeName: user_id
+        - AttributeName: email
           AttributeType: S
       GlobalSecondaryIndexes:
-        - IndexName: UserIdIndex
+        - IndexName: EmailIndex
           KeySchema:
-            - AttributeName: user_id
+            - AttributeName: email
               KeyType: HASH
           Projection:
             ProjectionType: ALL
       Tags:
         - Key: Name
-          Value: retirement-portfolios
+          Value: users
+        - Key: Environment
+          Value: production
+
+  FamilyInfoTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: family_info
+      BillingMode: PAY_PER_REQUEST
+      KeySchema:
+        - AttributeName: family_info_id
+          KeyType: HASH
+      AttributeDefinitions:
+        - AttributeName: family_info_id
+          AttributeType: S
+      Tags:
+        - Key: Name
+          Value: family-info
+        - Key: Environment
+          Value: production
+
+  RetirementFundTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: retirement_funds
+      BillingMode: PAY_PER_REQUEST
+      KeySchema:
+        - AttributeName: retirement_fund_info_id
+          KeyType: HASH
+      AttributeDefinitions:
+        - AttributeName: retirement_fund_info_id
+          AttributeType: S
+      Tags:
+        - Key: Name
+          Value: retirement-funds
         - Key: Environment
           Value: production
 
 Outputs:
   UsersTableArn:
     Description: ARN of the Users DynamoDB table
-    Value: !GetAtt RetirementUsersTable.Arn
+    Value: !GetAtt UsersTable.Arn
     Export:
       Name: !Sub "${AWS::StackName}-UsersTableArn"
 
-  PortfoliosTableArn:
-    Description: ARN of the Portfolios DynamoDB table
-    Value: !GetAtt RetirementPortfoliosTable.Arn
+  FamilyInfoTableArn:
+    Description: ARN of the Family Info DynamoDB table
+    Value: !GetAtt FamilyInfoTable.Arn
     Export:
-      Name: !Sub "${AWS::StackName}-PortfoliosTableArn"
+      Name: !Sub "${AWS::StackName}-FamilyInfoTableArn"
+
+  RetirementFundTableArn:
+    Description: ARN of the Retirement Fund DynamoDB table
+    Value: !GetAtt RetirementFundTable.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-RetirementFundTableArn"
