--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,61 +2,68 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "SAM Build",
+            "type": "shell",
+            "command": "sam",
+            "args": ["build"],
+            "group": "build",
+            "options": {
+                "cwd": "${workspaceFolder}/backend"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            }
+        },
+        {
+            "label": "SAM Local Start API",
+            "type": "shell",
+            "command": "sam",
+            "args": [
+                "local",
+                "start-api",
+                "--template-file",
+                "template.yaml",
+                "--env-vars",
+                "env.json",
+                "--port",
+                "5000",
+                "--host",
+                "0.0.0.0"
+            ],
+            "group": "test",
+            "options": {
+                "cwd": "${workspaceFolder}/backend"
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+            "dependsOn": "SAM Build"
+        },
+        {
             "label": "Start DynamoDB Local",
             "type": "shell",
-            "command": "docker run --rm -p 8000:8000 amazon/dynamodb-local",
-            "isBackground": true,
-            "problemMatcher": {
-                "pattern": {
-                    "regexp": "^$"
-                },
-                "background": {
-                    "activeOnStart": true,
-                    "beginsPattern": ".*",
-                    "endsPattern": ".*"
-                }
-            }
-        },
-        {
-            "label": "Start React",
-            "isBackground": true,
-            "type": "shell",
-            "command": "npm",
+            "command": "docker",
             "args": [
-                "start"
+                "run",
+                "-p",
+                "8000:8000",
+                "--name",
+                "dynamodb-local-sam",
+                "amazon/dynamodb-local"
             ],
-            "problemMatcher": {
-                "pattern": {
-                    "regexp": "^$"
-                },
-                "background": {
-                    "activeOnStart": true,
-                    "beginsPattern": "^Starting the development server",
-                    "endsPattern": "^Compiled successfully|^Failed to compile"
-                }
-            },
-            "options": {
-                "cwd": "${workspaceFolder}/frontend"
+            "group": "test",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
             }
-        },
-        {
-            "label": "Start DynamoDB Local and React",
-            "dependsOn": ["Start DynamoDB Local", "Start React"],
-            "dependsOrder": "sequence"
-        },
-        {
-            "label": "Terminate All Tasks",
-            "command": "echo ${input:terminate}",
-            "type": "shell",
-            "problemMatcher": []
-        }
-    ],
-    "inputs": [
-        {
-            "id": "terminate",
-            "type": "command",
-            "command": "workbench.action.tasks.terminate",
-            "args": "terminateAll"
         }
     ]
 }
