--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,5 @@ services:
     image: amazon/dynamodb-local:latest
     ports:
       - "8000:8000"
-    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath /home/dynamodblocal/data/"
-    volumes:
-      - dynamodb-data:/home/dynamodblocal/data
+    command: "-jar DynamoDBLocal.jar -sharedDb"
     user: root
-
-volumes:
-  dynamodb-data:
